@@ -1,3 +1,5 @@
+2005/12/24 -- released version 20051224_trunk
+
 2005/12/23 -- released version 20051223_trunk
 
 2005/12/22 -- released version 20051222_trunk
